:mag: add open graph image tag

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Photoshop Online</title>
 
+    <meta
+      property="og:image"
+      content="https://www.photoshoponline.app/open-graph.png"
+    />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
