:mag: add social previews

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,21 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Photoshop Online</title>
 
+    <!-- Socials -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@pso_app" />
+    <meta name="twitter:title" content="Photoshop Online" />
+    <meta
+      name="twitter:image"
+      content="https://photoshoponline.app/images/open-graph.png"
+    />
     <meta
       property="og:image"
-      content="https://www.photoshoponline.app/open-graph.png"
+      content="https://photoshoponline.app/images/open-graph.png"
+    />
+    <meta
+      property="og:image"
+      content="https://photoshoponline.app/images/open-graph.png"
     />
 
     <!-- Fonts -->
