--- a/public/index.html
+++ b/public/index.html
@@ -7,27 +7,27 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Photoshop Online is a free online photo editor for photography and design"
+      content="Nia Online is a free online photo editor for photography and design"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Photoshop Online</title>
+    <title>Nia Online</title>
 
     <!-- Socials -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@pso_app" />
-    <meta name="twitter:title" content="Photoshop Online" />
+    <meta name="twitter:title" content="Nia Online" />
     <meta
       name="twitter:image"
-      content="https://photoshoponline.app/images/open-graph.png"
+      content="https://niaonline.app/images/open-graph.png"
     />
     <meta
       property="og:image"
-      content="https://photoshoponline.app/images/open-graph.png"
+      content="https://niaonline.app/images/open-graph.png"
     />
     <meta
       property="og:image"
-      content="https://photoshoponline.app/images/open-graph.png"
+      content="https://niaonline.app/images/open-graph.png"
     />
 
     <!-- Fonts -->
