:wrench: update url

--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
     <meta name="twitter:title" content="React Photo Studio" />
     <meta
       name="twitter:image"
-      content="https://react-photo-studio.web.app/images/open-graph.png"
+      content="https://reactphotostudio.app/images/open-graph.png"
     />
     <meta
       property="og:image"
-      content="https://react-photo-studio.web.app/images/open-graph.png"
+      content="https://reactphotostudio.app/images/open-graph.png"
     />
 
     <!-- Fonts -->
